--- a/config/database.yml
+++ b/config/database.yml
@@ -28,12 +28,12 @@ development:
   adapter: postgresql
   encoding: unicode
   reconnect: false
-  database: 'd30ogdq254v1rv'
+  database: 'd3djsa0vtitm1b'
   pool: 5
-  username: 'qtpoxwtoijeotc'
+  username: 'wxwqbjpdzngdne'
   port: 5432
-  host: "ec2-54-204-25-54.compute-1.amazonaws.com"
-  password: "PXLZBDPaDso0z7S6nuiHO4QnRH"
+  host: "ec2-54-243-149-147.compute-1.amazonaws.com"
+  password: "YAqjk4QoecduY8teetCraPC765"
 #database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
@@ -47,10 +47,10 @@ production:
   adapter: postgresql
   encoding: unicode
   reconnect: false
-  database: 'd30ogdq254v1rv'
+  database: 'd3djsa0vtitm1b'
   pool: 5
-  username: 'qtpoxwtoijeotc'
+  username: 'wxwqbjpdzngdne'
   port: 5432
-  host: "ec2-54-204-25-54.compute-1.amazonaws.com"
-  password: "PXLZBDPaDso0z7S6nuiHO4QnRH"
+  host: "ec2-54-243-149-147.compute-1.amazonaws.com"
+  password: "YAqjk4QoecduY8teetCraPC765"
 #database: db/production.sqlite3
