--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 16
   timeout: 5000
 #
@@ -27,10 +27,10 @@ default: &default
 development:
   <<: *default
   database: db/development.sqlite3
-#  adapter: postgresql
-#  encoding: unicode
-#  reconnect: false
-#  database: 'd3djsa0vtitm1b'
+  adapter: postgresql
+  encoding: unicode
+  reconnect: false
+  database: 'thangngoc'
 #  pool: 5
 #  username: 'wxwqbjpdzngdne'
 #  port: 5432
